--- a/index.html
+++ b/index.html
@@ -148,11 +148,50 @@
                 padding: 1.5rem 0;
             }
         }
+
+        
+        .preview-image {
+            width: 100%;
+            max-width: 600px;
+            height: auto;
+            margin: 1rem auto;
+            display: block;
+            border-radius: 8px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
+
+        .preview-container {
+            text-align: center;
+            margin: 1rem 0 2rem 0;
+        }
+
+        .preview-caption {
+            color: #666;
+            font-size: 0.9rem;
+            margin-top: 0.5rem;
+        }
+
+        @media (max-width: 600px) {
+            .preview-image {
+                max-width: 100%;
+                border-radius: 4px;
+            }
+
+            .preview-caption {
+                font-size: 0.8rem;
+                padding: 0 1rem;
+            }
+        }
     </style>
 </head>
 <body>
     <div class="container">
         <h1>Hướng Dẫn Tạo Mê Cung với Flask</h1>
+
+        <div class="preview-container">
+            <img src="Capture.png" alt="Maze Game Preview" class="preview-image">
+            <p class="preview-caption">Trò chơi mê cung với người chơi (chấm đỏ) và đích đến (ngôi sao xanh)</p>
+        </div>
         
         <div class="section">
             <h2>File main.py - Khởi Tạo Ứng Dụng Flask</h2>
