--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
         <h1>Hướng Dẫn Tạo Mê Cung với Flask</h1>
 
         <div class="preview-container">
-            <img src="Capture.PNG" alt="Maze Game Preview" class="preview-image">
+            <img src="./images/capture.png" alt="Maze Game Preview" class="preview-image">
             <p class="preview-caption">Trò chơi mê cung với người chơi (chấm đỏ) và đích đến (ngôi sao xanh)</p>
         </div>
         
